<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">\tiCLM Cipla</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_pencil">&#xf040;</string>
    <string name="iclmcalender">iClm \n Calender</string>
    <string name="icon_meter">&#xf080;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_plan">&#xf073;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_conatinerl">&#xf0e5;</string>
    <string name="icon_menu">&#xf039;</string>
    <string name="icon_location">&#xf124;</string>
    <string name="icon_check">&#xf046;</string>
    <string name="icon_image">&#xf03e;</string>
    <string name="icon_info">&#xf05a;</string>
    <string name="icon_play">&#xf144;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_menu_list">&#xf0c9;</string>
    <string name="icon_three_dot">...</string>
    <string name="icon_tick">&#xf00c;</string>
    <string name="icon_drawer">&#xf0c9;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_callavg">&#xf201;</string>
    <string name="icon_comment">&#xf075;</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_profile">&#xf007;</string>
    <string name="icon_dustbin">&#xf014;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_arrowleft">&#xf104;</string>
    <string name="icon_arrowright">&#xf105;</string>
    <string name="icon_pen">&#xf040;</string>
    <string name="icon_map">&#xf124;</string>
    <string name="clock">&#xf017;</string>
    <string name="thumb">&#xf164;</string>
    <string name="mail">&#xf0e0;</string>
    <string name="pencil">&#xf040;</string>
    <string name="pin"> &#xf0c6;</string>
    <string name="iconlist">&#xf03a;</string>
    <string name="icon_exclaim">&#xf06a;</string>
    <string name="icon_happy">&#xf118;</string>
    <string name="icon_avg">&#xf11a;</string>
    <string name="icon_sad">&#xf119;</string>
    <string name="icon_cross">&#xf057;</string>
    <string name="icon_chart">&#xf080;</string>
    <string name="icon_triangel">&#xf04b;</string>
    <string name="icon_table">&#xf0ce;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_addpro">&#xf234;</string>
    <string name="icon_paperclip">&#xf0c6;</string>
    <string name="icon_redo">&#xf0e2;</string>
    <string name="icon_bar">&#xf080;</string>
    <string name="icon_pie">&#xf200;</string>
    <string name="icon_line">&#xf201;</string>
    <string name="icon_tri">&#xf0d9;</string>
    <string name="icon_trash"> &#xf1f8;</string>
    <string name="icon_tickbox">&#xf046;</string>
    <string name="icon_marker">&#xf041;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="direct_right">&#xf0da;</string>
    <string name="icon_circle">&#xf111;</string>
    <string name="icon_rigthtri">&#xf04b;</string>
    <string name="icon_cake">&#xf1fd;</string>
    <string name="icon_plus_square">&#xf0fe;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_square">&#xf096;</string>
    <string name="icon_photo">&#xf03e;</string>
    <string name="icon_a">&#xf031;</string>
    <string name="icon_music">&#xf001;</string>
    <string name="icon_video">&#xf03d;</string>
    <string name="icon_floppy">&#xf0c7;</string>
    <string name="icon_power_off">&#xf011;</string>
    <string name="icon_check_round">&#xf05d;</string>
    <string name="icon_up">&#xf0d8;</string>
    <string name="icon_down">&#xf0d7;</string>

    <string-array name="leave">
        <item>Select</item>
        <item>Sick Leave</item>
        <item>Annual Leave</item>
        <item>Disaster Relief</item>
        <item>Share Leave</item>
        <item>Emergency Leave</item>
        <item>Leave Without Pay</item>
        <item>Turn Off with Compensation</item>
    </string-array>
    <string-array name="tot">
        <item>Select</item>
        <item>Transit</item>
        <item>Cycle Meeting</item>
        <item>Office Duty</item>
        <item>Administrative work</item>
        <item>Training</item>
        <item>Annual Meeting</item>
    </string-array>
    <string-array name="closureap">
        <item>Select Reason</item>
        <item>Comumication to Physician</item>
        <item>Emailed to Physician</item>
        <item>Work Done</item>
    </string-array>
    <string-array name="deleteap">
        <item>Select Reason</item>
        <item>Error</item>
        <item>Not Relevant</item>
        <item>Physician Not Intreseted</item>
    </string-array>
    <string-array name="typeofphy">
        <item>Select Type</item>
        <item>Physician</item>
        <item>Phramacist</item>
        <item>Hospital</item>
        <item>Manager</item>
        <item>Distributor</item>
        <item>Self</item>
    </string-array>
    <string-array name="items">
        <item>Marketing Manager</item>
        <item>Product Manager</item>
        <item>Area Manager</item>
        <item>Regional Sales Manager</item>
        <item>Zonal Sales Manager</item>
        <item>H R</item>
    </string-array>
    <string-array name="graphdata">
        <item>Monthly</item>
        <item>Weekly</item>
        <item>Quaterly</item>
    </string-array>
    <string-array name="data">
        <item>Finance</item>
        <item>H.R</item>
        <item>Development</item>
        <item>Research</item>
        <item>Management</item>
        <item>Other</item>
    </string-array>
    <string-array name="SelectBrand">
        <item>Select Brand(s)</item>
        <item>C-FIX</item>
        <item>Mezzo Drop</item>
        <item>Solsuna</item>
    </string-array>
    <string-array name="category">
        <item>Sample Request</item>
        <item>LBL</item>
        <item>Research Reference</item>
        <item>Complaint</item>
    </string-array>
    <string-array name="person">
        <item>General</item>
        <item>LBL</item>
        <item>Research Reference</item>
        <item>Study</item>
        <item>PCP</item>
    </string-array>
    <string-array name="addday">
        <item>Add day</item>
    </string-array>
    <string-array name="speciality">
        <item>Select Specialty</item>
        <item>Cardiology</item>
        <item>Neurology</item>
        <item>Chest Physician</item>
        <item>Dermatology</item>
    </string-array>
    <string-array name="patch">
        <item>Select Patch</item>
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>New York</item>
    </string-array>
    <string-array name="location">
        <item>Select Location</item>
        <item>Hampshire</item>
        <item>Yorkshire</item>
        <item>NewLocation</item>
        <item>OldLocation</item>
    </string-array>
    <string-array name="graphdataspec">
        <item>Cardio</item>
        <item>Nuero</item>
        <item>Gp</item>
    </string-array>
    <string-array name="graphdatasegment">
        <item>Cardio,Class B</item>
        <item>Nuero,C-Fix</item>
    </string-array>
    <string-array name="graphdatavf">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="graphdataclass">
        <item>Class A</item>
        <item>Class B</item>
    </string-array>
    <string-array name="day">
        <item>Select</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="animarr">
        <item>Select</item>
        <item>bounce</item>
        <item>shake</item>
        <item>flip</item>
        <item>zoomIn</item>
        <item>zoomOut</item>
    </string-array>
    <string-array name="calltype">
        <item>Select</item>
        <item>Face To Face</item>
        <item>Phone Call</item>
        <item>Conference</item>
    </string-array>
    <string-array name="session">
        <item>Select</item>
        <item>Morning</item>
        <item>Evening</item>
    </string-array>
    <string-array name="yesno">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="timespent">
        <item>Select</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
    </string-array>
    <string name="title_activity_sync">SyncActivity</string>

</resources>