<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/upperarea"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/bg_broderfor_tumbnail"
        android:padding="10dp" >

        <TextView
            android:id="@+id/titlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iclmcalender"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_meter"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_search"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_plan"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_add"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/conatiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_conatinerl"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/icon_menu"
                android:textSize="34sp" />
        </LinearLayout>
    </RelativeLayout>

    <com.idunnololz.widgets.AnimatedExpandableListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upperarea"
        android:groupIndicator="@null" />

</RelativeLayout>