<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/upperarea"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/blackbg_broder"
        android:padding="10dp" >

        <TextView
            android:id="@+id/titlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iclmcalender"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_meter"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_search"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_plan"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_add"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/conatiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_conatinerl"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/icon_menu"
                android:textSize="24sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upperarea"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/listfordoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2" />
    </LinearLayout>

</RelativeLayout>

