<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/icon_check"
        android:textColor="#9e9e9e"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/childiewoflist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/chkbox"
        android:background="@drawable/selectorforactionpoint"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/upperlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Data1"
                    android:textColor="#212121"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Data2"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/childtextview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Data3"
                    android:textColor="#212121"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/childtextview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Data4"
                    android:textColor="#212121"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingTop="13dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tick1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="B"
                        android:textColor="#212121"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tick2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="J"
                        android:textColor="#212121"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="11:00"
                        android:textColor="#212121"
                        android:textSize="14sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp" >

                    <TextView
                        android:id="@+id/attach"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/icon_paperclip"
                        android:textColor="#757575"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/icon_comment"
                        android:textColor="#757575"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/addfrnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/icon_addpro"
                        android:textColor="#757575"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/drmenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="..."
                        android:textColor="#212121"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/indicatyor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/icon_rigthtri"
        android:textColor="@android:color/transparent"
        android:textSize="24sp" />

</RelativeLayout>